Daily update: junit final updates